# pingpong_tracker

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.scripts/: build-pingpong.sh  build.sh  clean.sh  init_devcontainer.sh  launch.sh  record.sh
pingpong_tracker_ws/src/kalman_trajectory_predictor/: CMakeLists.txt  package.xml  plugins.xml
pingpong_tracker_ws/src/kalman_trajectory_predictor/config/: image_publisher_params.yaml  params.yaml
pingpong_tracker_ws/src/kalman_trajectory_predictor/include/kalman_trajectory_predictor/: ball_detector.hpp  coordinate_converter.hpp  image_processor.hpp  image_publisher_node.hpp  image_source.hpp  kalman_filter.hpp  pnp_solver.hpp  predictor_node.hpp
pingpong_tracker_ws/src/kalman_trajectory_predictor/launch/: predictor.launch.py  start_video_publisher.launch.py
pingpong_tracker_ws/src/kalman_trajectory_predictor/src/: ball_detector_node.cpp  coordinate_converter.cpp  image_processor.cpp  image_publisher_node.cpp  image_visualizer_node.cpp  kalman_filter.cpp  kalman_predictor_node.cpp  pnp_solver.cpp  predictor_container_executable.cpp  predictor_node.cpp
pingpong_tracker_ws/src/kalman_trajectory_predictor/src/lib/: ball_detector.cpp  coordinate_converter.cpp  image_source.cpp  kalman_filter.cpp  pnp_solver.cpp
pingpong_tracker_ws/src/mv_camera_driver/: CMakeLists.txt  package.xml
pingpong_tracker_ws/src/mv_camera_driver/include/mv_camera_driver/: camera_wrapper.hpp
pingpong_tracker_ws/src/mv_camera_driver/src/: camera_driver_node.cpp  main.cpp
pingpong_tracker_ws/src/my_msgs/: CMakeLists.txt  package.xml
pingpong_tracker_ws/src/my_msgs/msg/: BallState.msg
pingpong_tracker_ws/src/ros2_mindvision_camera/: CMakeLists.txt  package.xml
pingpong_tracker_ws/src/ros2_mindvision_camera/config/: camera_info.yaml  camera_params.yaml
pingpong_tracker_ws/src/ros2_mindvision_camera/scripts/: extract_data.py
pingpong_tracker_ws/src/ros2_mindvision_camera/src/: mv_camera_node.cpp
pingpong_tracker_ws/src/vision_pipeline/: CMakeLists.txt  package.xml
pingpong_tracker_ws/src/vision_pipeline/include/vision_pipeline/: deep_learning_component.hpp  kalman_filter_component.hpp
pingpong_tracker_ws/src/vision_pipeline/src/: deep_learning_component.cpp  kalman_filter_component.cpp
