<?xml version="1.0"?>
<package format="3">
  <name>kalman_trajectory_predictor</name>
  <version>0.0.0</version>
  <description>A ROS2 package for pingpong ball trajectory tracking and prediction.</description>
  <maintainer email="2829004293@qq.com">heyeuuu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>camera_info_manager</depend>
  <depend>rclcpp_components</depend>
  <!-- <depend>OpenCV</depend> -->
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ament_cmake_auto>
      <plugin>plugins.xml</plugin>
    </ament_cmake_auto>
  </export>
</package>